@@ -4,11 +4,13 @@ Joseki3
 Joseki 3.2
 ----------
 
++ Streaming queriescan now work (requires writing server initialization code for your DB) 
 + Support for SPARQL/Update.
 + Complete integration with SDB
 + Upgraded to ARQ 2.2 and lucene-core-2.2.0.jar
 + Upgraded Jetty to 6.1.10
   Jar changes for version number changes.
+
 
 Joseki 3.1
 ----------
